--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.8.2",
+    "axios": "^1.9.0",
     "framer-motion": "^12.4.10",
     "lucide-react": "^0.479.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
     "react-loading-skeleton": "^3.5.0",
-    "react-router-dom": "^7.3.0"
+    "react-router-dom": "^7.3.0",
+    "recharts": "^2.15.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
